--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,9 +1,19 @@
-h1 a, h2 a {
-    color: #00008B;
-    font-family: "lobster";
+h1 {
+  font-family: "Lobster";
+  color: #C23500
+}
+
+h2 {
+  font-family: "Lobster";
+  color: #00008B;
+}
+
+p {
+  font-family: "Times";
 }
 
 body {
-    padding-left: 30px;
-    padding-top: 30px;
+    padding-left: 50px;
+    padding-top: 40px;
+    background-color: #DBF9FC
 }
