--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,6 +5,8 @@
   <head>
     <title>Nicolas' Blog!</title>
 
+    <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <meta charset="utf-8">
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
   </head>
@@ -13,16 +15,18 @@
     <h1>Welcome to the <em>awesome</em> blog of Nicolas! </h1>
     <hr>
     <h2>BlogPosts</h2>
+    <p> </p>
     {% for post in posts %}
     <article class="">
-      <h4>{{post.title}}</h4>
+      <p><b>{{post.title}}</b></p>
       <p>{{post.text|linebreaksbr}}</p>
       <time>published: {{ post.published_date }}</time>
+      <p> </p>
     </article>
     {% endfor %}
     <hr>
     <h4>Contact info:</h4>
-    <p>Check out my <a href=https://www.linkedin.com/in/nicolas-grunwald-921580218/"">linked-in,</a> </p>
-    <p>or write me an e-mail at nicolasgrunwald@yahoo.dk !</p>
+    <p>Check out my <a href=https://www.linkedin.com/in/nicolas-grunwald-921580218/"">linked-in</a>,</p>
+    <p> or send me an <a href = "mailto: nicolasgrunwald@yahoo.dk">Email!</a></p>
   </body>
 </html>
