--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,24 +9,36 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static '/css/blog.css' %}">
     <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
   </head>
 
   <body>
-    <h1>Welcome to the <em>awesome</em> blog of Nicolas! </h1>
+    <header class="page-header">
+      <div class="container">
+        <h1><a href="/">The <em>awesome</em> blog of Nicolas! </a></h1>
+      </div>
+    </header>
+
+    <main class="container">
+      <div class="row">
+        <div class="col">
+            {% for post in posts %}
+                <article class="post">
+                    <time class="date">
+                        {{ post.published_date }}
+                    </time>
+                    <h2><a href="">{{ post.title }}</a></h2>
+                    <p>{{ post.text|linebreaksbr }}</p>
+                </article>
+            {% endfor %}
+        </div>
+      </div>
+    </main>
     <hr>
-    <h2>BlogPosts</h2>
-    <p> </p>
-    {% for post in posts %}
-    <article class="">
-      <p><b>{{post.title}}</b></p>
-      <p>{{post.text|linebreaksbr}}</p>
-      <time>published: {{ post.published_date }}</time>
-      <p> </p>
-    </article>
-    {% endfor %}
-    <hr>
-    <h4>Contact info:</h4>
-    <p>Check out my <a href=https://www.linkedin.com/in/nicolas-grunwald-921580218/"">linked-in</a>,</p>
-    <p> or send me an <a href = "mailto: nicolasgrunwald@yahoo.dk">Email!</a></p>
+    <main class="container">
+      <h4>Contact info:</h4>
+      <p>Check out my <a href=https://www.linkedin.com/in/nicolas-grunwald-921580218/"">linked-in</a>,</p>
+      <p> or send me an <a href = "mailto: nicolasgrunwald@yahoo.dk">Email!</a></p>
+    </main>
   </body>
 </html>
